tests/knowledge/context/drift/aws/security_group/add_rule_to_existing_security_group/main.tf
locals {
  cidr_block = "10.0.0.0/24"
}

resource "aws_vpc" "vpc" {
  cidr_block = local.cidr_block

}

resource "aws_internet_gateway" "gw" {
  vpc_id = aws_vpc.vpc.id

  tags = {
    Name = "main"
  }
}

resource "aws_default_route_table" "default_route_table" {
  default_route_table_id = aws_vpc.vpc.default_route_table_id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.gw.id
  }
  tags = {
    Name = "default table"
  }
}

resource "aws_security_group" "security_group_test" {
  name        = "examplerulename"
  description = "Allow TLS inbound traffic"
  vpc_id      = aws_vpc.vpc.id

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["10.0.0.0/24"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "example_rule_with_descriptions"
  }
}
